--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "start": "concurrently --kill-others \"npm run dev\" \"npm --prefix server run dev\""
+    "preview": "vite preview"
   },
   "dependencies": {
     "@apollo/client": "^3.8.8",
@@ -46,7 +45,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "vite": "^4.4.5",
-    "concurrently": "^8.2.2"
+    "vite": "^4.4.5"
   }
 }
