Add new UI components and update package.json

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.8.8",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "artplayer": "^5.1.0",
@@ -27,6 +28,7 @@
     "lucide-react": "^0.303.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-resizable-panels": "^1.0.8",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
     "react-top-loading-bar": "^2.3.1",
