--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.303.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-resizable-panels": "^1.0.8",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
