--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-loading-skeleton": "^3.3.1",
     "react-resizable-panels": "^1.0.8",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
