--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@react-aria/ssr": "^3.9.1",
@@ -59,7 +60,7 @@
     "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.0",
+    "react-hook-form": "^7.50.1",
     "react-loading-skeleton": "^3.4.0",
     "react-resizable-panels": "^2.0.3",
     "sonner": "^1.4.0",
