--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dotenv": "^16.4.1",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
+    "framer-motion": "^11.0.3",
     "graphql-yoga": "^5.1.1",
     "hls.js": "^1.5.3",
     "lucide-react": "^0.321.0",
@@ -78,6 +79,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/parser": "^6.20.0",
     "autoprefixer": "^10.4.17",
+    "encoding": "^0.1.13",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "eslint-config-prettier": "^9.1.0",
