--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,14 @@
 {
   "name": "Imvt",
   "short_name": "Imvt",
-  "start_url": "https://imvt.vercel.app/",
-  "display": "standalone",
+  "start_url": "/",
   "description": "A web app for exploring, watching movies, tv shows, Live TV and anime built with Nextjs.",
   "lang": "English",
   "dir": "auto",
   "theme_color": "#000000",
   "background_color": "#151517",
-  "orientation": "any",
+  "display": "fullscreen",
+  "orientation": "natural",
   "icons": [
     {
       "src": "assets/Icons/manifest-icon-192.maskable.png",
@@ -70,15 +70,76 @@
   "shortcuts": [
     {
       "name": "Profile",
-      "url": "https://imvt.vercel.app/my-profile",
-      "description": "Your Profile"
+      "url": "/my-profile",
+      "description": "Your Profile",
+      "icons": [
+        {
+          "src": "assets/Icons/manifest-icon-192.maskable.png",
+          "sizes": "192x192",
+          "type": "image/png",
+          "purpose": "any"
+        },
+        {
+          "src": "assets/Icons/manifest-icon-192.maskable.png",
+          "sizes": "192x192",
+          "type": "image/png",
+          "purpose": "maskable"
+        },
+        {
+          "src": "assets/Icons/manifest-icon-512.maskable.png",
+          "sizes": "512x512",
+          "type": "image/png",
+          "purpose": "any"
+        },
+        {
+          "src": "assets/Icons/manifest-icon-512.maskable.png",
+          "sizes": "512x512",
+          "type": "image/png",
+          "purpose": "maskable"
+        }
+      ]
     },
     {
       "name": "Watchlist",
-      "url": "https://imvt.vercel.app/watchlist",
-      "description": "Your Watchlist"
+      "url": "/watchlist",
+      "description": "Your Watchlist",
+      "icons": [
+        {
+          "src": "assets/Icons/manifest-icon-192.maskable.png",
+          "sizes": "192x192",
+          "type": "image/png",
+          "purpose": "any"
+        },
+        {
+          "src": "assets/Icons/manifest-icon-192.maskable.png",
+          "sizes": "192x192",
+          "type": "image/png",
+          "purpose": "maskable"
+        },
+        {
+          "src": "assets/Icons/manifest-icon-512.maskable.png",
+          "sizes": "512x512",
+          "type": "image/png",
+          "purpose": "any"
+        },
+        {
+          "src": "assets/Icons/manifest-icon-512.maskable.png",
+          "sizes": "512x512",
+          "type": "image/png",
+          "purpose": "maskable"
+        }
+      ]
     }
   ],
   "display_override": ["window-controls-overlay"],
-  "protocol_handlers": [{ "protocol": "mailto", "url": "/newEmail?to=%s" }]
+  "protocol_handlers": [
+    {
+      "protocol": "mailto",
+      "url": "/handle_mailto"
+    },
+    {
+      "protocol": "tel",
+      "url": "/handle_tel"
+    }
+  ]
 }
