--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "m3u8-file-parser": "^0.2.4",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "postgres": "^3.4.3",
     "react": "^18",
