--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,38 +1,30 @@
 {
   "name": "Imvt",
   "short_name": "Imvt",
-  "start_url": "/",
   "description": "A web app for exploring, watching movies, tv shows, Live TV and anime built with Nextjs.",
+  "start_url": "/",
   "lang": "English",
   "dir": "auto",
-  "theme_color": "#000000",
+  "theme_color": "#151517",
   "background_color": "#151517",
-  "display": "fullscreen",
+  "display": "standalone",
   "orientation": "natural",
+  "display_override": ["window-controls-overlay"],
   "icons": [
     {
-      "src": "assets/Icons/manifest-icon-192.maskable.png",
+      "src": "assets/logo64.png",
+      "sizes": "64x64",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/logo192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
-      "src": "assets/Icons/manifest-icon-192.maskable.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "assets/Icons/manifest-icon-512.maskable.png",
+      "src": "assets/logo512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "assets/Icons/manifest-icon-512.maskable.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     }
   ],
   "screenshots": [
@@ -40,31 +32,36 @@
       "src": "assets/screenshots/desktop-homepage.png",
       "sizes": "1920x1080",
       "type": "image/png",
-      "description": "A screenshot of the home page"
+      "description": "A screenshot of the home page",
+      "form_factor": "wide"
     },
     {
       "src": "assets/screenshots/desktop-media-player.png",
       "sizes": "1920x1080",
       "type": "image/png",
-      "description": "A screenshot of the media player page"
+      "description": "A screenshot of the media player page",
+      "form_factor": "wide"
     },
     {
       "src": "assets/screenshots/desktop-search.png",
       "sizes": "1920x1080",
       "type": "image/png",
-      "description": "A screenshot of the search page"
-    },
-    {
-      "src": "assets/screenshots/desktop-watchlist.png",
-      "sizes": "1920x1080",
-      "type": "image/png",
-      "description": "A screenshot of the watchlist page"
+      "description": "A screenshot of the search page",
+      "form_factor": "wide"
     },
     {
       "src": "assets/screenshots/desktop-iptv-page.png",
       "sizes": "1920x1080",
       "type": "image/png",
-      "description": "A screenshot of the IPTV page"
+      "description": "A screenshot of the IPTV page",
+      "form_factor": "wide"
+    },
+    {
+      "src": "assets/screenshots/mobile-homepage.png",
+      "sizes": "470x1080",
+      "type": "image/png",
+      "description": "A screenshot of the Homepage on mobile",
+      "form_factor": "narrow"
     }
   ],
   "shortcuts": [
@@ -74,28 +71,19 @@
       "description": "Your Profile",
       "icons": [
         {
-          "src": "assets/Icons/manifest-icon-192.maskable.png",
+          "src": "assets/logo64.png",
+          "sizes": "64x64",
+          "type": "image/png"
+        },
+        {
+          "src": "assets/logo192.png",
           "sizes": "192x192",
-          "type": "image/png",
-          "purpose": "any"
+          "type": "image/png"
         },
         {
-          "src": "assets/Icons/manifest-icon-192.maskable.png",
-          "sizes": "192x192",
-          "type": "image/png",
-          "purpose": "maskable"
-        },
-        {
-          "src": "assets/Icons/manifest-icon-512.maskable.png",
+          "src": "assets/logo512.png",
           "sizes": "512x512",
-          "type": "image/png",
-          "purpose": "any"
-        },
-        {
-          "src": "assets/Icons/manifest-icon-512.maskable.png",
-          "sizes": "512x512",
-          "type": "image/png",
-          "purpose": "maskable"
+          "type": "image/png"
         }
       ]
     },
@@ -105,41 +93,31 @@
       "description": "Your Watchlist",
       "icons": [
         {
-          "src": "assets/Icons/manifest-icon-192.maskable.png",
+          "src": "assets/logo64.png",
+          "sizes": "64x64",
+          "type": "image/png"
+        },
+        {
+          "src": "assets/logo192.png",
           "sizes": "192x192",
-          "type": "image/png",
-          "purpose": "any"
+          "type": "image/png"
         },
         {
-          "src": "assets/Icons/manifest-icon-192.maskable.png",
-          "sizes": "192x192",
-          "type": "image/png",
-          "purpose": "maskable"
-        },
-        {
-          "src": "assets/Icons/manifest-icon-512.maskable.png",
+          "src": "assets/logo512.png",
           "sizes": "512x512",
-          "type": "image/png",
-          "purpose": "any"
-        },
-        {
-          "src": "assets/Icons/manifest-icon-512.maskable.png",
-          "sizes": "512x512",
-          "type": "image/png",
-          "purpose": "maskable"
+          "type": "image/png"
         }
       ]
     }
   ],
-  "display_override": ["window-controls-overlay"],
   "protocol_handlers": [
     {
       "protocol": "mailto",
-      "url": "/handle_mailto"
+      "url": "/handle_mailto/%s"
     },
     {
       "protocol": "tel",
-      "url": "/handle_tel"
+      "url": "/handle_tel/%s"
     }
   ]
 }
