--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Prettier and Build Test
+name: CI - Prettier, ESLint, and Build Test
 
 on:
   push:
@@ -21,11 +21,15 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18' # Specify your node version
+          node-version: '18'  # Specify your node version
 
       # Install dependencies
       - name: Install dependencies
         run: npm ci
+
+      # Run ESLint check using Next.js
+      - name: Run ESLint check
+        run: npm run lint
 
       # Run Prettier check
       - name: Run Prettier check
@@ -34,7 +38,4 @@ jobs:
       # Build the project
       - name: Build the project
         run: npm run build
-
-      # Run tests (Optional, only include if you have tests)
-      - name: Run tests
-        run: npm test
+        
